--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -3,6 +3,9 @@
 @import "normalize";
 @import url(http://fonts.googleapis.com/css?family=Muli|Nunito:300);
 
+$FontAwesomePath: '../fonts/fontawesome';
+@import "fonts/fontawesome/font-awesome";
+
 @mixin diag-background($width, $height, $backgroundColor, $highlightColor: "") {
     &:before {
         content: '';
@@ -19,12 +22,21 @@
     }
 }
 
+::-moz-selection {
+    background-color: #ae9add;
+}
+
+::selection {
+    background-color: #ae9add;
+}
+
 body {
     margin: 3em 0;
     font-family: Muli;
+    color: #222;
 }
 
-h2 {
+h1, h2, h3, h4, h5 {
     font-family: Nunito;
 }
 
@@ -32,21 +44,26 @@ header {
 
     margin: 3em 0;
     padding: 3em 0;
-    background-color: #ffd400;
+
+    background: #222 url('../images/Difference-between-Atmosphere-and-Space1.jpg') no-repeat center;
+    background-size: cover;
+
     text-align: center;
+    color: #f5f5f5;
+    text-shadow: 0px 2px 0px #674fad;
 
     h1 {
         margin: 0 0 0.15em 0;
         padding-bottom: 0.2em;
-        font-family: Nunito;
+        border-bottom: 1px dotted #444;
         font-size: 3.8em;
         font-weight: 400;
-        border-bottom: 1px solid #deb800;
         display: inline-block;
     }
 
     h3 {
         margin: 0.4em 0;
+        font-family: Muli;
         font-size: 1.9em;
         font-weight: 400;
     }
@@ -54,9 +71,15 @@ header {
 }
 
 .summary,
-.cv {
+.experience {
 
     @include outer-container;
+
+    h2 {
+        margin-bottom: 1em;
+        padding-bottom: 0.7em;
+        border-bottom: 1px solid #222;
+    }
 
     .entry {
         @include row();
@@ -68,34 +91,6 @@ header {
 .basic-info {
 
     @include span-columns(4);
-    padding: 3em 4em;
-    position: relative;
-
-    &.red { @include diag-background(346px, 176px, #ffc3c3, #ffdcdc); }
-    &.blue { @include diag-background(346px, 176px, #c3d9ff, #dce6ff); }
-    &.green { @include diag-background(346px, 176px, #d4ffc3, #e3ffdc); }
-    &.grey { @include diag-background(346px, 176px, #ddd); }
-
-    span {
-        display: block;
-    }
-
-    .role,
-    .company,
-    .duration {
-        font-family: Muli;
-    }
-
-    .role,
-    .company {
-        font-size: 1.2em;
-        font-weight: 600;
-        line-height: 1.3em;
-    }
-
-    .duration {
-        margin-top: 0.8em;
-    }
 
     ol.contact-details {
 
@@ -104,9 +99,73 @@ header {
         list-style: none;
 
         li {
+
             font-size: 1.2em;
             font-weight: 600;
-            line-height: 1.5em;
+            line-height: 2em;
+
+            a {
+                text-decoration: none;
+                color: #222;
+                display: inline-block;
+
+                &:hover {
+                    opacity: 0.7;
+                }
+
+            }
+
+            i[class^=icon-] {
+                height: 1.5em;
+                width: 1.5em;
+                margin-right: 1em;
+                @include border-radius(5px);
+                background-color: #222;
+                font-size: 0.8em;
+                color: #f5f5f5;
+                box-shadow: 0px 2px 0px #b092f1;
+                line-height: 1.5em;
+                text-align: center;
+                display: inline-block;
+            }
+
+        }
+
+    }
+
+}
+
+.experience {
+
+    .basic-info {
+
+        padding: 3em 4em;
+        position: relative;
+
+        &.red { @include diag-background(346px, 176px, #ffc3c3, #ffdcdc); }
+        &.blue { @include diag-background(346px, 176px, #c3d9ff, #dce6ff); }
+        &.green { @include diag-background(346px, 176px, #d4ffc3, #e3ffdc); }
+        &.grey { @include diag-background(346px, 176px, #ddd); }
+
+        span {
+            display: block;
+        }
+
+        .role,
+        .company,
+        .duration {
+            font-family: Muli;
+        }
+
+        .role,
+        .company {
+            font-size: 1.2em;
+            font-weight: 600;
+            line-height: 1.3em;
+        }
+
+        .duration {
+            margin-top: 0.8em;
         }
 
     }
@@ -117,6 +176,32 @@ header {
 
     @include span-columns(8);
     p:first-child { margin-top: 0 }
+
+    .additional {
+
+        padding-top: 1em;
+
+        &.red {
+            border-top: 0.5em solid #ffc3c3;
+            color: darken(#ffc3c3, 10%);
+        }
+
+        &.blue {
+            border-top: 0.5em solid #c3d9ff;
+            color: darken(#c3d9ff, 10%);
+        }
+
+        &.green {
+            border-top: 0.5em solid #d4ffc3;
+            color: darken(#d4ffc3, 10%);
+        }
+
+        &.grey {
+            border-top: 0.5em solid #ddd;
+            color: darken(#ddd, 10%);
+        }
+
+    }
 
 }
 
