--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2006,6 +2006,14 @@ header {
           .full-info .additional .projects li img:hover {
             opacity: 0.7; }
 
+.skills .col-3 {
+  display: block;
+  float: left;
+  margin-right: 2.35765%;
+  width: 31.76157%; }
+  .skills .col-3:last-child {
+    margin-right: 0; }
+
 @media screen and (max-width: 1138px) {
   body {
     font-size: 0.95em; }
