--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -257,7 +257,8 @@ header {
     }
 
     .summary,
-    .experience {
+    .experience,
+    .skills {
         @include outer-container;
     }
 
@@ -288,7 +289,8 @@ header {
     }
 
     .summary,
-    .experience {
+    .experience,
+    .skills {
         @include outer-container;
     }
 
@@ -357,7 +359,8 @@ header {
     }
 
     .summary,
-    .experience {
+    .experience,
+    .skills {
         @include outer-container;
         margin: 0 2em;
     }
@@ -371,6 +374,23 @@ header {
         margin-bottom: 1em;
         padding: 1em;
         white-space: normal !important;
+    }
+
+    .skills {
+
+        .col-3 {
+
+            @include span-columns(12);
+
+            ul {
+                border-left: 1px solid #ddd;
+                border-right: 1px solid #ddd;
+                padding-left: 3em;
+                padding-right: 1em;
+            }
+
+        }
+
     }
 
 }
