minified space image

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -48,7 +48,7 @@ header {
     margin: 3em 0;
     padding: 3em 0;
 
-    background: #222 url('../images/Difference-between-Atmosphere-and-Space1.jpg') no-repeat center;
+    background: #222 url('../images/space-mini.jpg') no-repeat center;
     background-size: cover;
 
     text-align: center;
