--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1800,7 +1800,7 @@ h1, h2, h3, h4, h5 {
 header {
   margin: 3em 0;
   padding: 3em 0;
-  background: #222222 url("../images/Difference-between-Atmosphere-and-Space1.jpg") no-repeat center;
+  background: #222222 url("../images/space-mini.jpg") no-repeat center;
   background-size: cover;
   text-align: center;
   color: #f5f5f5;
