--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1790,12 +1790,25 @@ a .icon-rotate-90:before, a .icon-rotate-180:before, a .icon-rotate-270:before, 
   background-color: #ae9add; }
 
 body {
-  margin: 3em 0;
+  margin: 0 0 3em 0;
   font-family: Muli;
   color: #222; }
 
 h1, h2, h3, h4, h5 {
   font-family: Nunito; }
+
+nav {
+  text-align: center; }
+  nav ul {
+    margin: 0 auto;
+    padding: 0; }
+    nav ul li {
+      box-shadow: 0 2px 0 #b092f1;
+      margin: 0 0.3em;
+      padding: 0.3em 0;
+      font-size: 0.8em;
+      display: inline-block;
+      text-transform: uppercase; }
 
 header {
   margin: 3em 0;
