--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -34,13 +34,36 @@ $FontAwesomePath: '../fonts/fontawesome';
 }
 
 body {
-    margin: 3em 0;
+    margin: 0 0 3em 0;
     font-family: Muli;
     color: #222;
 }
 
 h1, h2, h3, h4, h5 {
     font-family: Nunito;
+}
+
+nav {
+
+    text-align: center;
+
+    ul {
+
+        margin: 0 auto;
+        padding: 0;
+
+        li {
+            box-shadow: 0 2px 0 #b092f1;
+            margin: 0 0.3em;
+            padding: 0.3em 0;
+            font-size: 0.8em;
+            display: inline-block;
+            text-transform: uppercase;
+        }
+
+
+    }
+
 }
 
 header {
