Retina was always loading font weight 300 (well, 400, but displaying as 300). We want 300 and not 400 so ensure 300 is loaded

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -1,7 +1,7 @@
 @import "bourbon/bourbon";
 @import "neat/neat";
 @import "normalize";
-@import url(http://fonts.googleapis.com/css?family=Muli|Nunito:300);
+@import url(http://fonts.googleapis.com/css?family=Muli:300|Nunito:300);
 
 $FontAwesomePath: '../fonts/fontawesome';
 @import "fonts/fontawesome/font-awesome";
