--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Muli|Nunito:300);
+@import url(http://fonts.googleapis.com/css?family=Muli:300|Nunito:300);
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
