WIP nav concept

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1801,14 +1801,20 @@ nav {
   text-align: center; }
   nav ul {
     margin: 0 auto;
-    padding: 0; }
+    border-bottom: 2px solid #d4c9f1;
+    padding: 0;
+    font-size: 0.8em;
+    line-height: 2em;
+    display: inline-block; }
     nav ul li {
-      box-shadow: 0 2px 0 #b092f1;
       margin: 0 0.3em;
-      padding: 0.3em 0;
-      font-size: 0.8em;
-      display: inline-block;
-      text-transform: uppercase; }
+      box-shadow: 0 2px 0 #b092f1;
+      text-transform: uppercase;
+      display: inline-block; }
+      nav ul li:first-child {
+        margin-left: 0; }
+      nav ul li:last-child {
+        margin-right: 0; }
 
 header {
   margin: 3em 0;
