--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -50,15 +50,22 @@ nav {
     ul {
 
         margin: 0 auto;
+        border-bottom: 2px solid #d4c9f1;
         padding: 0;
+        font-size: 0.8em;
+        line-height: 2em;
+        display: inline-block;
 
         li {
-            box-shadow: 0 2px 0 #b092f1;
+
             margin: 0 0.3em;
-            padding: 0.3em 0;
-            font-size: 0.8em;
-            display: inline-block;
+            box-shadow: 0 2px 0 #b092f1;
             text-transform: uppercase;
+            display: inline-block;
+
+            &:first-child { margin-left: 0 }
+            &:last-child { margin-right: 0 }
+
         }
 
 
